started over just trying to get 1 button to work, now there is 5ish

--- a/index_bkup_06_17_22.html
+++ b/index_bkup_06_17_22.html
@@ -24,25 +24,25 @@
         </div>
 
         <div class="row">
-          <button id="num7" class="pad">7</button>
-          <button id="num8" class="pad">8</button>
-          <button id="num9" class="pad">9</button>
+          <button id="seven" class="pad">7</button>
+          <button id="eight" class="pad">8</button>
+          <button id="nine" class="pad">9</button>
 
         </div>
 
         <div class="row">
-          <button id="num4" class="pad">4</button>
-          <button id="num5" class="pad">5</button>
-          <button id="num6" class="pad">6</button>
+          <button id="four" class="pad">4</button>
+          <button id="five" class="pad">5</button>
+          <button id="six" class="pad">6</button>
         </div>
 
         <div class="row">
-          <button id="num1" class="pad">1</button>
-          <button id="num2" class="pad">2</button>
-          <button id="num3" class="pad">3</button>
+          <button id="one" class="pad">1</button>
+          <button id="two" class="pad">2</button>
+          <button id="three" class="pad">3</button>
         </div>
         <div class="row">
-          <button id="num0" class="pad">0</button>
+          <button id="zero" class="pad">0</button>
           <button id="dot" class="dot_pad">.</button>
         </div>
 
