close but gotta work

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="calc_container">
     <div id="display">
-      <textarea name="result" rows="1" cols="25" class="display"></textarea>
+      <textarea name="result" rows="1" cols="25" class="display">0</textarea>
     </div>
     <div class="btn_container">
       <div class="calc">
@@ -43,7 +43,7 @@
         </div>
         <div class="row">
           <button id="num0" class="pad">0</button>
-          <button id="dot" class="dot_pad">.</button>
+          <button id="dot" class="func_pad">.</button>
         </div>
 
       </div>
